tests/src/Loader/classloader/generics/Instantiation/Negative/param07.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_param07_param07_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param07_param07_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param07\\param07.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
